# transformer-model

./: .gitignore  README.md  description.md  license.md  pyproject.toml
configs/: runtime.example.json
scripts/: generate.py  train_book.py
src/transformer/: __init__.py  config.py  dataset.py  generate.py  runtime.py  tokenizer.py  train.py
src/transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/transformer/model/: __init__.py  attention.py  block.py  ffn.py  gpt.py
tests/: conftest.py
tests/acceptance/: test_train_on_tiny_corpus.py
tests/fixtures/: tiny_book.txt
tests/integration/: test_checkpoint.py  test_train_step.py
tests/regression/: test_fixed_seed_loss.py
tests/unit/: test_attention.py  test_block.py  test_dataset.py  test_gpt_shapes.py  test_runtime.py  test_tokenizer.py
