[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.1.0"
description = "A simple GPT-style transformer for training on book text"
readme = "README.md"
license = "MIT"
license-files = ["license.md"]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
